# mpu

./: .env.enc  .env.example  .gitignore  .prettierignore  CLAUDE.md  Makefile  eslint.config.mjs  go.mod  go.sum  jest.config.mjs  main.go  next.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json  settings.local.json
.claude/skills/dependencies-unix-way/: SKILL.md
.claude/skills/reference-codebases/: SKILL.md
.claude/skills/sheet-cache/: SKILL.md
cmd/: cache_helpers.go  client.go  clients.go  config.go  config_path.go  config_test.go  db_helpers.go  flags_test.go  hint.go  hint_test.go  janet_commands.go  janet_commands_test.go  ldb.go  lrdb.go  lsdb.go  populate-cache.go  range.go  range_test.go  rdb.go  repl.go  repl_test.go  root.go  sheet_cache.go  sheet_cache_test.go  sheet_cache_ttl_test.go  spreadsheet_resolve_test.go  token.go  update_spreadsheets.go  webapp.go  webapp_batch_get.go  webapp_batch_get_all.go  webapp_batch_update.go  webapp_copy.go  webapp_create.go  webapp_delete.go  webapp_editors.go  webapp_folder.go  webapp_get.go  webapp_info.go  webapp_insert.go  (+7 more)
docs/: janet-json.md  sheet-batch.md
internal/auth/: auth.go
internal/cache/: cache.go  cache_test.go  clients.go  migration.go  migrations.go  sheet_cells.go  sheet_cells_test.go  spreadsheets_test.go  webcache.go
internal/config/: config.go
internal/defaults/: defaults.go  defaults_test.go
internal/janet/: janet.c  janet.go  janet_test.go  json.c
internal/pgclient/: pgclient_test.go
internal/webapp/: client.go  client_test.go
janet/: completion.janet  formula-deps.janet  formula-eval.janet  formula-finder.janet  formula-parser.janet  highlight.janet  hint.janet  prelude.janet  ss-analyze.janet
janet/commands/: ss-analyze.janet  ss-eval.janet
janet/formula-fns/: _array-util.janet  _numeric-walk.janet  add.janet  arabic.janet  arrayformula.janet  average.janet  cards_col.janet  char.janet  chooserows.janet  cl_query.janet  clean.janet  code.janet  combin.janet  concatenate.janet  cos.janet  count.janet  datevalue.janet  days.janet  dec2bin.janet  dec2oct.janet  divide.janet  edate.janet  even.janet  exact.janet  fact.janet  find.janet  iferror.janet  image.janet  index.janet  int.janet  isblank.janet  isdate.janet  iserror.janet  iseven.janet  isnumber.janet  isodd.janet  istext.janet  keysquery.janet  lcm.janet  left.janet  (+51 more)
janet/tests/: chooserows_test.janet  cl_query_test.janet  formula-eval_test.janet  formula-finder_test.janet  index_test.janet  info_test.janet  keysquery_test.janet  lookup2_test.janet  map_test.janet  math_scalar_test.janet  ss-analyze_test.janet  stat_test.janet  text_test.janet  xlookup_test.janet
mpu-old/: .gitignore  CLAUDE.md  go.sum
mpu-old/cmd/: cache_ttl_test.go  client.go  client_test.go  clients.go  config.go  config_path.go  db_helpers.go  db_helpers_test.go  janet_recovery.go  ldb.go  lsdb.go  repl.go  root.go  rsdb.go  stdin_body_test.go  token.go  update_spreadsheets.go  webapp_batch_get.go  webapp_copy.go  webapp_delete.go  webapp_editors.go  webapp_folder.go  webapp_info.go  webapp_insert.go  webapp_keys.go  webapp_set.go  webapp_sharing.go  webapp_upsert.go  webapp_values_update.go
mpu-old/docs/: formula-eval-report.md
mpu-old/internal/cache/: migrations.go  pgcache.go  spreadsheets.go  token.go
mpu-old/internal/config/: config_test.go
mpu-old/internal/janet/: errors_test.go  janet.go  janet_test.go  json_test.go
mpu-old/internal/pgclient/: pgclient.go
mpu-old/internal/slapi/: clients.go
mpu-old/internal/webapp/: client_test.go  types.go
mpu-old/janet/: formula-eval.janet  help.janet  init.janet  prompt.janet
mpu-old/janet/commands/: ss-analyze.janet
mpu-old/janet/formula-fns/: _criteria.janet  _date-utils.janet  _stats-util.janet  _truthy.janet  abs.janet  address.janet  and.janet  atan.janet  atan2.janet  averageif.janet  base.janet  bin2dec.janet  by_nm_ids.janet  bycol.janet  byrow.janet  ceiling.janet  choose.janet  choosecols.janet  chooserows.janet  column.janet  columns.janet  concat.janet  config.janet  counta.janet  countblank.janet  countif.janet  date.janet  datedif.janet  day.janet  dec2hex.janet  degrees.janet  eomonth.janet  exp.janet  false.janet  filter.janet  flatten.janet  floor.janet  gcd.janet  get_basket.janet  hex2dec.janet  (+65 more)
mpu-old/janet/tests/: array_hof_test.janet  dates_test.janet  formula-deps_test.janet  formula-eval_test.janet  formula-parser_test.janet  isblank_test.janet  logical_test.janet  sql_date_test.janet  text2_test.janet  trig_engineering_test.janet
mpu-old/scripts/: README-CACHE.md  cache-accumulate.sh  cache-mock.sh  envault.sh
scripts/: install.sh  reinstall.sh  test-with-cache.sh
src/: program.ts
src/commands/: CLAUDE.md  completion.ts  config.ts  db.ts  help.ts  internal-complete.ts  sheet.ts
src/lib/: CLAUDE.md  a1.ts  branding.ts  cache.ts  completion.ts  config.ts  db-resolve.ts  db.ts  env.ts  help.ts  paths.ts  pgclient.ts  retry.ts  server-resolve.ts  sheet-aliases.ts  sheet-cache.ts  sl-clients.ts  sl-spreadsheets.ts  slapi.ts  spreadsheet.ts  webapp.ts
src/mpu/: __init__.py  __main__.py  cli.py  cli_registry.py
src/mpu/commands/: _backup_unit_proto.py  _logs_loki.py  _logs_portainer.py  _mpuapi_runtime.py  _mpuapi_spec.py  _portainer_resolve.py  _ssh_node_cli.py  _wb_loader.py  (+61 more)
tests/: CLAUDE.md  a1.test.ts  cache.test.ts  completion.test.ts  config.test.ts  conftest.py  db-resolve.test.ts  db.test.ts  env.test.ts  help.test.ts  pg_fakes.py  pgclient.test.ts  retry.test.ts  server-resolve.test.ts  sheet-aliases.test.ts  sheet-cache.test.ts  sheet-ls.test.ts  sheet-open.test.ts  sheet-resolve.test.ts  sheet-set.test.ts  sheet.test.ts  sl-clients.test.ts  sl-spreadsheets.test.ts  slapi.test.ts  smoke.test.ts  spreadsheet.test.ts  test_backup_sql.py  test_backup_unit_proto.py  test_clean_local_clients.py  test_cli.py  test_cli_wrap.py  test_client_moves.py  test_client_transfer.py  test_commands_snapshot.py  test_confirm.py  test_containers.py  test_copy_client.py  test_copy_dev.py  test_copy_shared.py  test_d2_miro.py  (+84 more)
(+56 files in other folders)
