[project]
name = "mpu"
version = "0.1.0"
description = "Monorepo Python utilities — multi-purpose CLI for ad-hoc operations"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mpu = "mpu.cli:app"
mpu-search = "mpu.commands.search:run"
mpu-update = "mpu.commands.update:run"
mpu-sql = "mpu.commands.sql:run"
mpu-backup-wb-unit-proto = "mpu.commands.backup_wb_unit_proto:run"
mpu-backup-ozon-unit-proto = "mpu.commands.backup_ozon_unit_proto:run"
mpu-backup-wb-unit-manual-data = "mpu.commands.backup_wb_unit_manual_data:run"
mpu-wb-recalculate-expenses = "mpu.commands.recalculate_wb_expenses:run"
mpu-wb-save-expenses = "mpu.commands.save_wb_expenses:run"
mpu-process = "mpu.commands.process:run"
mpu-ss-update = "mpu.commands.ss_update:run"
mpu-ss-load = "mpu.commands.ss_load:run"
mpu-ss-datasets = "mpu.commands.ss_datasets:run"
mpu-wb-loader = "mpu.commands.wb_loader:run"
mpu-wb-jobs = "mpu.commands.wb_jobs:run"
mpu-wb-unit-calc = "mpu.commands.wb_unit_calc:run"
mpu-wb-unit-proto-new = "mpu.commands.wb_unit_proto_new:run"
mpu-iu-wb = "mpu.commands.iu_wb:run"
mpu-ozon-loader = "mpu.commands.ozon_loader:run"
mpu-ozon-jobs = "mpu.commands.ozon_jobs:run"
mpu-ozon-recalculate-expenses = "mpu.commands.recalculate_ozon_expenses:run"
mpu-ozon-save-expenses = "mpu.commands.save_ozon_expenses:run"
mpu-clients-migrations = "mpu.commands.clients_migrations:run"
mpu-datasets-migrations = "mpu.commands.datasets_migrations:run"
mpu-app-migrations = "mpu.commands.app_migrations:run"
mpu-users = "mpu.commands.users:run"
mpu-data-loader = "mpu.commands.data_loader:run"
mpu-data-loader-jobs = "mpu.commands.data_loader_jobs:run"
mpu-d2-miro = "mpu.commands.d2_miro:run"
mpu-run-js = "mpu.commands.run_js:run"
mpup-ssh = "mpu.commands.pssh:run"
mpup-ps = "mpu.commands.ps:run"
mpu-logs = "mpu.commands.logs:run"
mpup-health = "mpu.commands.health:run"
mpu-help = "mpu.commands.help:run"

# ─── mpuapi-* — sl-back HTTP API клиенты (см. src/mpu/commands/_mpuapi_spec.py) ─────────
# Все ссылаются на один runtime-модуль; токен кешируется на 10 мин в
# ~/.config/mpu/.api-token.json. Список регенерируется из COMMANDS:
#   uv run python -c 'from mpu.commands._mpuapi_spec import COMMANDS; \
#     [print(f"mpuapi-{c.name} = \"mpu.commands._mpuapi_runtime:run_{c.name.replace(\"-\",\"_\")}\"") for c in COMMANDS]'
mpuapi-get-token = "mpu.commands._mpuapi_runtime:run_get_token"
mpuapi-auth-login = "mpu.commands._mpuapi_runtime:run_auth_login"
mpuapi-auth-logout = "mpu.commands._mpuapi_runtime:run_auth_logout"
mpuapi-auth-refresh = "mpu.commands._mpuapi_runtime:run_auth_refresh"
mpuapi-auth-verify = "mpu.commands._mpuapi_runtime:run_auth_verify"
mpuapi-auth-resend-email = "mpu.commands._mpuapi_runtime:run_auth_resend_email"
mpuapi-auth-change-password = "mpu.commands._mpuapi_runtime:run_auth_change_password"
mpuapi-list-users = "mpu.commands._mpuapi_runtime:run_list_users"
mpuapi-get-user = "mpu.commands._mpuapi_runtime:run_get_user"
mpuapi-create-user = "mpu.commands._mpuapi_runtime:run_create_user"
mpuapi-update-user = "mpu.commands._mpuapi_runtime:run_update_user"
mpuapi-delete-user = "mpu.commands._mpuapi_runtime:run_delete_user"
mpuapi-list-roles = "mpu.commands._mpuapi_runtime:run_list_roles"
mpuapi-list-clients = "mpu.commands._mpuapi_runtime:run_list_clients"
mpuapi-get-client = "mpu.commands._mpuapi_runtime:run_get_client"
mpuapi-create-client = "mpu.commands._mpuapi_runtime:run_create_client"
mpuapi-update-client = "mpu.commands._mpuapi_runtime:run_update_client"
mpuapi-delete-client = "mpu.commands._mpuapi_runtime:run_delete_client"
mpuapi-destroy-client = "mpu.commands._mpuapi_runtime:run_destroy_client"
mpuapi-dataset-get = "mpu.commands._mpuapi_runtime:run_dataset_get"
mpuapi-dataset-save = "mpu.commands._mpuapi_runtime:run_dataset_save"
mpuapi-dataset-wb-unit-source = "mpu.commands._mpuapi_runtime:run_dataset_wb_unit_source"
mpuapi-list-client-modules = "mpu.commands._mpuapi_runtime:run_list_client_modules"
mpuapi-get-client-module = "mpu.commands._mpuapi_runtime:run_get_client_module"
mpuapi-update-client-module = "mpu.commands._mpuapi_runtime:run_update_client_module"
mpuapi-list-wb-cabinets = "mpu.commands._mpuapi_runtime:run_list_wb_cabinets"
mpuapi-get-wb-cabinets-by-sid = "mpu.commands._mpuapi_runtime:run_get_wb_cabinets_by_sid"
mpuapi-list-client-wb-cabinets = "mpu.commands._mpuapi_runtime:run_list_client_wb_cabinets"
mpuapi-list-wb-cabinet-modules = "mpu.commands._mpuapi_runtime:run_list_wb_cabinet_modules"
mpuapi-get-wb-cabinet-module = "mpu.commands._mpuapi_runtime:run_get_wb_cabinet_module"
mpuapi-update-wb-cabinet-module = "mpu.commands._mpuapi_runtime:run_update_wb_cabinet_module"
mpuapi-list-spreadsheets = "mpu.commands._mpuapi_runtime:run_list_spreadsheets"
mpuapi-get-spreadsheet = "mpu.commands._mpuapi_runtime:run_get_spreadsheet"
mpuapi-create-spreadsheet = "mpu.commands._mpuapi_runtime:run_create_spreadsheet"
mpuapi-update-spreadsheet = "mpu.commands._mpuapi_runtime:run_update_spreadsheet"
mpuapi-delete-spreadsheet = "mpu.commands._mpuapi_runtime:run_delete_spreadsheet"
mpuapi-get-ss-values = "mpu.commands._mpuapi_runtime:run_get_ss_values"
mpuapi-get-ss-my-access = "mpu.commands._mpuapi_runtime:run_get_ss_my_access"
mpuapi-list-client-spreadsheets = "mpu.commands._mpuapi_runtime:run_list_client_spreadsheets"
mpuapi-get-client-spreadsheet = "mpu.commands._mpuapi_runtime:run_get_client_spreadsheet"
mpuapi-create-client-spreadsheet = "mpu.commands._mpuapi_runtime:run_create_client_spreadsheet"
mpuapi-update-client-spreadsheet = "mpu.commands._mpuapi_runtime:run_update_client_spreadsheet"
mpuapi-delete-client-spreadsheet = "mpu.commands._mpuapi_runtime:run_delete_client_spreadsheet"
mpuapi-list-client-ss-datasets = "mpu.commands._mpuapi_runtime:run_list_client_ss_datasets"
mpuapi-get-client-ss-dataset = "mpu.commands._mpuapi_runtime:run_get_client_ss_dataset"
mpuapi-create-client-ss-dataset = "mpu.commands._mpuapi_runtime:run_create_client_ss_dataset"
mpuapi-update-client-ss-dataset = "mpu.commands._mpuapi_runtime:run_update_client_ss_dataset"
mpuapi-delete-client-ss-dataset = "mpu.commands._mpuapi_runtime:run_delete_client_ss_dataset"
mpuapi-list-client-wb-tokens = "mpu.commands._mpuapi_runtime:run_list_client_wb_tokens"
mpuapi-add-client-wb-token = "mpu.commands._mpuapi_runtime:run_add_client_wb_token"
mpuapi-delete-client-wb-token = "mpu.commands._mpuapi_runtime:run_delete_client_wb_token"
mpuapi-wb-token-seller-info = "mpu.commands._mpuapi_runtime:run_wb_token_seller_info"
mpuapi-wb-token-ping-content = "mpu.commands._mpuapi_runtime:run_wb_token_ping_content"
mpuapi-list-client-ozon-keys = "mpu.commands._mpuapi_runtime:run_list_client_ozon_keys"
mpuapi-add-client-ozon-key = "mpu.commands._mpuapi_runtime:run_add_client_ozon_key"
mpuapi-delete-client-ozon-key = "mpu.commands._mpuapi_runtime:run_delete_client_ozon_key"
mpuapi-ss-jobs-queue-status = "mpu.commands._mpuapi_runtime:run_ss_jobs_queue_status"
mpuapi-ss-jobs-active-jobs = "mpu.commands._mpuapi_runtime:run_ss_jobs_active_jobs"
mpuapi-ss-jobs-by-state = "mpu.commands._mpuapi_runtime:run_ss_jobs_by_state"
mpuapi-ss-jobs-job = "mpu.commands._mpuapi_runtime:run_ss_jobs_job"
mpuapi-ss-jobs-abort = "mpu.commands._mpuapi_runtime:run_ss_jobs_abort"
mpuapi-wb-jobs-queue-status = "mpu.commands._mpuapi_runtime:run_wb_jobs_queue_status"
mpuapi-wb-jobs-active-jobs = "mpu.commands._mpuapi_runtime:run_wb_jobs_active_jobs"
mpuapi-wb-jobs-by-state = "mpu.commands._mpuapi_runtime:run_wb_jobs_by_state"
mpuapi-wb-jobs-job = "mpu.commands._mpuapi_runtime:run_wb_jobs_job"
mpuapi-wb-jobs-abort = "mpu.commands._mpuapi_runtime:run_wb_jobs_abort"
mpuapi-ozon-jobs-queue-status = "mpu.commands._mpuapi_runtime:run_ozon_jobs_queue_status"
mpuapi-ozon-jobs-active-jobs = "mpu.commands._mpuapi_runtime:run_ozon_jobs_active_jobs"
mpuapi-ozon-jobs-by-state = "mpu.commands._mpuapi_runtime:run_ozon_jobs_by_state"
mpuapi-ozon-jobs-job = "mpu.commands._mpuapi_runtime:run_ozon_jobs_job"
mpuapi-ozon-jobs-abort = "mpu.commands._mpuapi_runtime:run_ozon_jobs_abort"
mpuapi-dl-jobs-queue-status = "mpu.commands._mpuapi_runtime:run_dl_jobs_queue_status"
mpuapi-dl-jobs-active-jobs = "mpu.commands._mpuapi_runtime:run_dl_jobs_active_jobs"
mpuapi-dl-jobs-by-state = "mpu.commands._mpuapi_runtime:run_dl_jobs_by_state"
mpuapi-dl-jobs-job = "mpu.commands._mpuapi_runtime:run_dl_jobs_job"
mpuapi-dl-jobs-abort = "mpu.commands._mpuapi_runtime:run_dl_jobs_abort"
mpuapi-integrity-runs = "mpu.commands._mpuapi_runtime:run_integrity_runs"
mpuapi-integrity-findings = "mpu.commands._mpuapi_runtime:run_integrity_findings"
mpuapi-integrity-skips = "mpu.commands._mpuapi_runtime:run_integrity_skips"
mpuapi-integrity-trigger = "mpu.commands._mpuapi_runtime:run_integrity_trigger"
mpuapi-cli-run = "mpu.commands._mpuapi_runtime:run_cli_run"
mpuapi-cli-manifest = "mpu.commands._mpuapi_runtime:run_cli_manifest"
mpuapi-cli-servers = "mpu.commands._mpuapi_runtime:run_cli_servers"
mpuapi-cli-log-subscribe = "mpu.commands._mpuapi_runtime:run_cli_log_subscribe"
mpuapi-cli-log-unsubscribe = "mpu.commands._mpuapi_runtime:run_cli_log_unsubscribe"
mpuapi-cli-log-heartbeat = "mpu.commands._mpuapi_runtime:run_cli_log_heartbeat"

# `mpup-*` — параллельные bin'ы к `mpu-*` cli_wrap-командам. Печатают
# `mpup-ssh <selector> --no-stdin -- node ...` вместо ssh+docker обёртки.
# Реализованы через env-override `MPU_WRAPPER=portainer` (см. `mpu.lib.cli_wrap`)
# — typer-команды и резолв параметров общие с `mpu-*`.
mpup-data-loader = "mpu.commands.data_loader:run_portainer"
mpup-data-loader-jobs = "mpu.commands.data_loader_jobs:run_portainer"
mpup-users = "mpu.commands.users:run_portainer"
mpup-iu-wb = "mpu.commands.iu_wb:run_portainer"
mpup-ss-datasets = "mpu.commands.ss_datasets:run_portainer"
mpup-ss-load = "mpu.commands.ss_load:run_portainer"
mpup-ss-update = "mpu.commands.ss_update:run_portainer"
mpup-ozon-loader = "mpu.commands.ozon_loader:run_portainer"
mpup-ozon-jobs = "mpu.commands.ozon_jobs:run_portainer"
mpup-wb-loader = "mpu.commands.wb_loader:run_portainer"
mpup-wb-jobs = "mpu.commands.wb_jobs:run_portainer"
mpup-wb-unit-calc = "mpu.commands.wb_unit_calc:run_portainer"
mpup-wb-unit-proto-new = "mpu.commands.wb_unit_proto_new:run_portainer"
mpup-clients-migrations = "mpu.commands.clients_migrations:run_portainer"
mpup-datasets-migrations = "mpu.commands.datasets_migrations:run_portainer"
mpup-app-migrations = "mpu.commands.app_migrations:run_portainer"
mpup-process = "mpu.commands.process:run_portainer"
mpup-wb-save-expenses = "mpu.commands.save_wb_expenses:run_portainer"
mpup-ozon-save-expenses = "mpu.commands.save_ozon_expenses:run_portainer"
mpup-wb-recalculate-expenses = "mpu.commands.recalculate_wb_expenses:run_portainer"
mpup-ozon-recalculate-expenses = "mpu.commands.recalculate_ozon_expenses:run_portainer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpu"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "RUF001",  # Russian comments/strings: cyrillic letters are intentional
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["mpu"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
