[project]
name = "mpu"
version = "0.1.0"
description = "Monorepo Python utilities — multi-purpose CLI for ad-hoc operations"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "loguru>=0.7",
]

[project.scripts]
# Единственный бинарь — `mpu`. Подкоманды диспатчатся внутри:
#   mpu <X>            — print + clipboard (бывший `mpu-X`)
#   mpu p <X>          — exec через Portainer (бывший `mpup-X`); `--print` возвращает в print-mode
#   mpu api <X>        — HTTP-клиенты sl-back (бывший `mpuapi-X`)
# Reg'и подкоманд: `mpu.cli_registry` (root + p), `mpu.commands._mpuapi_spec.COMMANDS` (api).
mpu = "mpu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpu"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "RUF001",  # Russian comments/strings: cyrillic letters are intentional
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["mpu"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
